trunk/Archive2/3d/d79419493d365a/output
main.cpp:42:5: error: 'stack' in namespace 'std' does not name a type
     std::stack<int> values;
     ^
main.cpp:43:5: error: 'stack' in namespace 'std' does not name a type
     std::stack<int> operators;
     ^
main.cpp: In member function 'virtual std::basic_streambuf<char>::int_type infix_buffer::overflow(std::basic_streambuf<char>::int_type)':
main.cpp:16:21: error: 'stack' was not declared in this scope
             while (!stack.empty())
                     ^
main.cpp:19:21: error: 'values' was not declared in this scope
                 a = values.top();
                     ^
main.cpp:23:40: error: 'operators' was not declared in this scope
                 switch (char_type op = operators.top())
                                        ^
main.cpp:35:17: error: 'operators' was not declared in this scope
                 operators.push(*it);
                 ^
main.cpp:37:17: error: 'values' was not declared in this scope
                 values.push(digit);
                 ^
main.cpp:37:29: error: 'digit' was not declared in this scope
                 values.push(digit);
                             ^
main.cpp:39:5: warning: no return statement in function returning non-void [-Wreturn-type]
     }
     ^
